[gd_scene load_steps=4 format=3 uid="uid://1ydo5lq8aodf"]

[ext_resource type="Script" uid="uid://dnwp5rqpjw324" path="res://card/template/dungeon/midboss/split_stats_container.gd" id="1_my1ls"]
[ext_resource type="PackedScene" uid="uid://b4bcleemsns2e" path="res://card/template/shared/stats_container.tscn" id="1_sod4i"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_sod4i"]
thickness = 5
vertical = true

[node name="SplitStatsContainer" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_my1ls")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Typeline1" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Typeline 1"
horizontal_alignment = 1

[node name="StatsContainer" parent="VBoxContainer" instance=ExtResource("1_sod4i")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_sod4i")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Typeline2" type="Label" parent="VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Typeline 2"
horizontal_alignment = 1

[node name="StatsContainer2" parent="VBoxContainer2" instance=ExtResource("1_sod4i")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
